--- a/employee-tracker/package.json
+++ b/employee-tracker/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
+    "chokidar": "^3.5.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-scripts": "^4.0.3"
   },
   "devDependencies": {},
@@ -24,5 +27,17 @@
   "bugs": {
     "url": "https://github.com/natan15/Employee-Directory/issues"
   },
-  "homepage": "https://github.com/natan15/Employee-Directory#readme"
+  "homepage": "https://github.com/natan15/Employee-Directory#readme",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
