--- a/employee-tracker/package.json
+++ b/employee-tracker/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "Employee-Directory",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
-    "chokidar": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/natan15/Employee-Directory.git"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/natan15/Employee-Directory/issues"
-  },
-  "homepage": "https://github.com/natan15/Employee-Directory#readme",
   "browserslist": {
     "production": [
       ">0.2%",
